--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,3 +11,26 @@ on:
 jobs:
   validate:
     uses: trussworks/shared-actions/.github/workflows/validate.yml@main
+
+  build-and-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
+
+      - name: Check for reserved branch names
+        run: make check_branch
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build containers
+        run: make build
+
+      - name: Test containers
+        run: make test
+
+      - name: Release containers
+        run: make release
