--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   validate:
-    uses: trussworks/shared-actions/.github/workflows/validate.yml@fix-validate-workflow
+    uses: trussworks/shared-actions/.github/workflows/validate.yml@main
 
   build-and-release:
     runs-on: ubuntu-latest
